test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-nil.good
assign-nonnil-shared-from-oknil-nil.chpl:8: error: Cannot assign to shared MyClass from nil
